--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <title>Webpack Starter Kit</title>
-  </head>
-  <body>
-    <h1>Webpack Starter Kit</h1>
 
-    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
+<head>
+  <title>Wheel of Misfortune</title>
+</head>
 
-    <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
-  </body>
+<body>
+  <h1 class='heading'>Wheel of MisFortune</h1>
+  <form class='form form--names'>
+    <h2 class='enter-names'>Enter Names</h2>
+    <div class='name-input'>
+      <label for="input--player-1">Player 1:</label>
+      <input class='input--player-1' type="text">
+    </div>
+    <div class='name-input'>
+      <label for="input--player-2">Player 2:</label>
+      <input class='input--player-2' type="text">
+    </div>
+    <div class='name-input'>
+      <label for="input--player-3">Player 3:</label>
+      <input class='input--player-3' type="text">
+    </div>
+  </form>
+  <button class='button button--start'>Start Game</button>
+</body>
+
 </html>
