--- a/src/index.html
+++ b/src/index.html
@@ -3,28 +3,33 @@
 
 <head>
   <title>Wheel of Misfortune</title>
-  <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lacquer&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1 class='heading'>Wheel of MisFortune</h1>
-  <form class='form form--names'>
-    <h2 class='enter-names'>Enter Names:</h2>
-    <div class='name-input-wrapper'>
-      <label class='name-input-label' for="input--player-1">Player 1: </label>
-      <input class='name-input input--player-1' type="text">
-    </div>
-    <div class='name-input-wrapper'>
-      <label class='name-input-label' for="input--player-2">Player 2: </label>
-      <input class='name-input input--player-2' type="text">
-    </div>
-    <div class='name-input-wrapper'>
-      <label class='name-input-label' for="input--player-3">Player 3: </label>
-      <input class='name-input input--player-3' type="text">
-    </div>
-  </form>
-  <button class='button button--start'>Start Game</button>
+  <main class="intro-page">
+    <h1 class="heading">Wheel of MisFortune</h1>
+    <form class="form form--names">
+      <h2 class="enter-names">Enter Names:</h2>
+      <div class="name-input-wrapper">
+        <label class="name-input-label" for="input--player-1">Player 1: </label>
+        <input class="name-input input--player-1" type="text">
+      </div>
+      <div class="name-input-wrapper">
+        <label class="name-input-label" for="input--player-2">Player 2: </label>
+        <input class="name-input input--player-2" type="text">
+      </div>
+      <div class="name-input-wrapper">
+        <label class="name-input-label" for="input--player-3">Player 3: </label>
+        <input class="name-input input--player-3" type="text">
+      </div>
+    </form>
+    <button class="button button--start">Start Game</button>
+  </main>
+  <main class="gameplay">
+
+  </main>
 </body>
 
 </html>
