Add dynamic puzzle board
Co-authored by: Sam Coleman <smcoleman19@gmail.com>
Co-authored by: Eduardo Rodriguez <jeduardorjx@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,68 @@
     </form>
     <button class="button button--start">Start Game</button>
   </main>
-  <main class="gameplay">
+  <main hidden class="gameplay">
+    <section class="game-section">
+      <div class='wheel'>
 
+      </div>
+      <div class="board">
+
+      </div>
+    </section>
+    <section class="player-section">
+      <div class="player player1-info">
+        <p class='player-name player-name--1'>Player 1</p>
+        <p class='player-score player-score--1'>Round Score: 0</p>
+        <p class='player-total-score player-total-score--1'>Game Score: 0</p>
+      </div>
+      <div class="player player2-info">
+        <p class='player-name player-name--2'>Player 2</p>
+        <p class='player-score player-score--2'>Round Score: 0</p>
+        <p class='player-total-score player-total-score--2'>Game Score: 0</p>
+      </div>
+      <div class="player player3-info">
+        <p class='player-name player-name--3'>Player 3</p>
+        <p class='player-score player-score--3'>Round Score: 0</p>
+        <p class='player-total-score player-total-score--3'>Game Score: 0</p>
+      </div>
+    </section>
+    <section class="button-section">
+      <button class="button button-vowel" type="button">Buy a vowel</button>
+      <button class="button button-solve" type="button">Solve puzzle</button>
+      <button class="button button-spin" type="button">Spin the wheel</button>
+      <button class="button button-quit" type="button">Reset game</button>
+      <button class="button button-quit" type="button">Quit game</button>
+    </section>
+    <section class="letter-section">
+      <span>B</span>
+      <span>C</span>
+      <span>D</span>
+      <span>F</span>
+      <span>G</span>
+      <span>H</span>
+      <span>J</span>
+      <span>K</span>
+      <span>L</span>
+      <span>M</span>
+      <span>N</span>
+      <span>P</span>
+      <span>Q</span>
+      <span>R</span>
+      <span>S</span>
+      <span>T</span>
+      <span>V</span>
+      <span>W</span>
+      <span>X</span>
+      <span>Y</span>
+      <span>Z</span>
+      <span>|</span>
+      <span>A</span>
+      <span>E</span>
+      <span>I</span>
+      <span>O</span>
+      <span>U</span>
+    </section>
   </main>
 </body>
 
