Add functionality to reset button

--- a/src/index.html
+++ b/src/index.html
@@ -54,11 +54,11 @@
       </div>
     </section>
     <section class="button-section">
-      <button class="button button-vowel" type="button">Buy a vowel</button>
-      <button class="button button-solve" type="button">Solve puzzle</button>
-      <button class="button button-spin" type="button">Spin the wheel</button>
-      <button class="button button-quit" type="button">Reset game</button>
-      <button class="button button-quit" type="button">Quit game</button>
+      <button class="button button--vowel" type="button">Buy a vowel</button>
+      <button class="button button--solve" type="button">Solve puzzle</button>
+      <button class="button button--spin" type="button">Spin the wheel</button>
+      <button class="button button--reset" type="button">Reset game</button>
+      <button class="button button--quit" type="button">Quit game</button>
     </section>
     <section class="letter-section">
       <span>B</span>
