Add creepy font style

--- a/src/index.html
+++ b/src/index.html
@@ -61,33 +61,33 @@
       <button class="button button--quit" type="button">Quit game</button>
     </section>
     <section class="letter-section">
-      <span>B</span>
-      <span>C</span>
-      <span>D</span>
-      <span>F</span>
-      <span>G</span>
-      <span>H</span>
-      <span>J</span>
-      <span>K</span>
-      <span>L</span>
-      <span>M</span>
-      <span>N</span>
-      <span>P</span>
-      <span>Q</span>
-      <span>R</span>
-      <span>S</span>
-      <span>T</span>
-      <span>V</span>
-      <span>W</span>
-      <span>X</span>
-      <span>Y</span>
-      <span>Z</span>
-      <span>|</span>
-      <span>A</span>
-      <span>E</span>
-      <span>I</span>
-      <span>O</span>
-      <span>U</span>
+      <span class="pick-letter">B</span>
+      <span class="pick-letter">C</span>
+      <span class="pick-letter">D</span>
+      <span class="pick-letter">F</span>
+      <span class="pick-letter">G</span>
+      <span class="pick-letter">H</span>
+      <span class="pick-letter">J</span>
+      <span class="pick-letter">K</span>
+      <span class="pick-letter">L</span>
+      <span class="pick-letter">M</span>
+      <span class="pick-letter">N</span>
+      <span class="pick-letter">P</span>
+      <span class="pick-letter">Q</span>
+      <span class="pick-letter">R</span>
+      <span class="pick-letter">S</span>
+      <span class="pick-letter">T</span>
+      <span class="pick-letter">V</span>
+      <span class="pick-letter">W</span>
+      <span class="pick-letter">X</span>
+      <span class="pick-letter">Y</span>
+      <span class="pick-letter">Z</span>
+      <span class="pick-letter">|</span>
+      <span class="pick-letter">A</span>
+      <span class="pick-letter">E</span>
+      <span class="pick-letter">I</span>
+      <span class="pick-letter">O</span>
+      <span class="pick-letter">U</span>
     </section>
   </main>
 </body>
