--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
     <section class="button-section">
       <button class="button button--vowel" type="button">Buy a vowel</button>
       <button class="button button--solve" type="button">Solve puzzle</button>
-      <button class="button button--spin" type="button">Spin the wheel</button>
+      <button class="button button--spin" type="button">Spin wheel</button>
       <button class="button button--reset" type="button">Reset game</button>
       <button class="button button--quit" type="button">Quit game</button>
     </section>
@@ -82,7 +82,7 @@
       <span class="pick-letter">X</span>
       <span class="pick-letter">Y</span>
       <span class="pick-letter">Z</span>
-      <span class="pick-letter">|</span>
+      <span>|</span>
       <span class="pick-letter">A</span>
       <span class="pick-letter">E</span>
       <span class="pick-letter">I</span>
