Randomize wheel, buy consonant, append board functionality
Co-authored by: Sam Coleman <smcoleman19@gmail.com>
Co-authored by: Eduardo Rodriguez <jeduardorjx@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Wheel of Misfortune</title>
   <link href="https://fonts.googleapis.com/css?family=Lacquer&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -61,34 +61,38 @@
       <button class="button button--quit" type="button">Quit game</button>
     </section>
     <section class="letter-section">
-      <span class="pick-letter">B</span>
-      <span class="pick-letter">C</span>
-      <span class="pick-letter">D</span>
-      <span class="pick-letter">F</span>
-      <span class="pick-letter">G</span>
-      <span class="pick-letter">H</span>
-      <span class="pick-letter">J</span>
-      <span class="pick-letter">K</span>
-      <span class="pick-letter">L</span>
-      <span class="pick-letter">M</span>
-      <span class="pick-letter">N</span>
-      <span class="pick-letter">P</span>
-      <span class="pick-letter">Q</span>
-      <span class="pick-letter">R</span>
-      <span class="pick-letter">S</span>
-      <span class="pick-letter">T</span>
-      <span class="pick-letter">V</span>
-      <span class="pick-letter">W</span>
-      <span class="pick-letter">X</span>
-      <span class="pick-letter">Y</span>
-      <span class="pick-letter">Z</span>
+      <span class="pick-letter consonant">B</span>
+      <span class="pick-letter consonant">C</span>
+      <span class="pick-letter consonant">D</span>
+      <span class="pick-letter consonant">F</span>
+      <span class="pick-letter consonant">G</span>
+      <span class="pick-letter consonant">H</span>
+      <span class="pick-letter consonant">J</span>
+      <span class="pick-letter consonant">K</span>
+      <span class="pick-letter consonant">L</span>
+      <span class="pick-letter consonant">M</span>
+      <span class="pick-letter consonant">N</span>
+      <span class="pick-letter consonant">P</span>
+      <span class="pick-letter consonant">Q</span>
+      <span class="pick-letter consonant">R</span>
+      <span class="pick-letter consonant">S</span>
+      <span class="pick-letter consonant">T</span>
+      <span class="pick-letter consonant">V</span>
+      <span class="pick-letter consonant">W</span>
+      <span class="pick-letter consonant">X</span>
+      <span class="pick-letter consonant">Y</span>
+      <span class="pick-letter consonant">Z</span>
       <span>|</span>
-      <span class="pick-letter">A</span>
-      <span class="pick-letter">E</span>
-      <span class="pick-letter">I</span>
-      <span class="pick-letter">O</span>
-      <span class="pick-letter">U</span>
+      <span class="pick-letter vowel">A</span>
+      <span class="pick-letter vowel">E</span>
+      <span class="pick-letter vowel">I</span>
+      <span class="pick-letter vowel">O</span>
+      <span class="pick-letter vowel">U</span>
     </section>
+  </main>
+  <main hidden class="quit-screen">
+    <h1 class="player-quit">You have all died</h1>
+    <button class="button button--new-game" type="button">Start New Game</button>
   </main>
 </body>
 
