Increase size of wheel

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,7 @@
   </main>
   <main hidden class="quit-screen">
     <h1 class="player-quit">You have all died</h1>
+    <button class="button button--go-back" type="button">Continue Playing</button>
     <button class="button button--new-game" type="button">Start New Game</button>
   </main>
 </body>
