Add category to board

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,9 @@
     <section class="game-section">
       <div class='wheel'>
       </div>
-      <div class="board">
-
+      <div class="board-section">
+        <div class="board"></div>
+        <div class="category"></div>
       </div>
     </section>
     <section class="player-section">
