Add highlighter for current player

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
       </div>
     </section>
     <section class="player-section">
-      <div class="player player1-info">
+      <div class="player player1-info current-player">
         <p class='player-name player-name--1'>Player 1</p>
         <p class='player-score player-score--1'>Round Score: 0</p>
         <p class='player-total-score player-total-score--1'>Game Score: 0</p>
