Implement solve puzzle functionality
Co-authored by: Sam Coleman <smcoleman19@gmail.com>
Co-authored by: Eduardo Rodriguez <jeduardorjx@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,10 @@
       </div>
       <div class="board-section">
         <div class="board"></div>
-        <div class="category"></div>
+        <div class="cat-round-wrapper">
+          <div class="round"></div>
+          <div class="category"></div>
+        </div>
       </div>
     </section>
     <section class="player-section">
@@ -95,6 +98,10 @@
     <button class="button button--go-back" type="button">Continue Playing</button>
     <button class="button button--new-game" type="button">Start New Game</button>
   </main>
+  <section class='solve-puzzle'>
+    <input type="text" name="solve" class="input--solve-puzzle">
+    <button type="submit" class="button--solve-puzzle">Solve</button>
+  </section>
 </body>
 
 </html>
