Add functionality to bonus round
Co-authored-by: Eduardo Rodriguez <jeduardorjx@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,10 @@
     <button class="button button--go-back" type="button">Continue Playing</button>
     <button class="button button--new-game" type="button">Start New Game</button>
   </main>
+  <main hidden class="end-screen">
+    <h1 class="player-end"></h1>
+    <button class="button button--new-game" type="button">Start New Game</button>
+  </main>
   <section class='solve-puzzle'>
     <input type="text" name="solve" class="input--solve-puzzle">
     <button type="submit" class="button--solve-puzzle">Solve</button>
